# EloMaluco

./: .gitignore  CMakeLists.txt  README.md  exemplo.xml  reader.cpp
data/: exemplo.xml  output.xml  solution.xml
src/: XMLManager.cpp  XMLManager.hpp  application.cpp  application.hpp  cube.cpp  cube.hpp  main.cpp  reader.cpp  reader.hpp  square.cpp  square.hpp  textureManager.cpp  textureManager.hpp  translator.cpp  translator.hpp  wraps.hpp
